syntax = "proto3";

package gnboot;

import "openapiv3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/liluoliluoli/gnboot/api/actor";

option (openapi.v3.document) = {
  info : {title : "actor";
version : "1.0.0";
}
components : {
security_schemes: {
additional_properties:
  [{
    name:
      "BearerAuth";
    value: {
    security_scheme: {
    type:
      "http";
    scheme:
      "bearer";
    }
    }
  }]
}
}
  security: [
    {
      additional_properties: [
        {
          name: "BearerAuth";
          value: {
            value: []
          }
  }
      ]
      }
  ]
  }
  ;

  message Actor {
    int32 id = 1;
    string name = 2;
    string thumbnail = 3;
    string region = 4;
    bool isDirector = 5;
    string character = 6;
  }
